# swarm-drone-search

./: Mode2_Mode3_Implementation_Plan.md  README.md
px4_config/airframes/: 4022_gz_x500_swarm
ros2_ws/docs/: CURRENT_STACK_STATUS.md  STRATEGY_3D_SCAN.md
ros2_ws/docs/diagrams/: mode2_navigation_hierarchy.dot  mode2_navigation_hierarchy_slide.dot
ros2_ws/src/swarm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_bringup/config/: rtabmap_params.yaml  scan_rviz.rviz  slam_toolbox_params.yaml  slam_toolbox_params_d1.yaml
ros2_ws/src/swarm_bringup/launch/: d1_single_agent_search.launch.py  d1_test_forward.launch.py  d1_test_hold.launch.py  d2_dual_agent_search.launch.py
ros2_ws/src/swarm_bringup/launch/archive/: b1_apf_test.launch.py  c1_multi_apf.launch.py  m1_offboard.launch.py  m2_multi_drone.launch.py  m3_perception.launch.py  swarm_sim.launch.py
ros2_ws/src/swarm_bringup/scripts/: camera_view.py  entropy_centroid_publisher.py  gz_truth_bridge.py  lidar_tilt_filter.py  lifecycle_autostart.py  map_merger.py  map_snapshot.py  odom_publisher.py  scan_to_range.py  slam_pose_fusion.py  slam_to_px4.py  start_multi_sitl.sh  start_sitl.sh  visualize_layers.py
ros2_ws/src/swarm_control/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_control/archive/: apf_controller.cpp  frontier_planner.cpp  lidar_mapper.cpp  offboard_control.cpp
ros2_ws/src/swarm_control/src/: search_mission_controller.cpp
ros2_ws/src/swarm_coordination/: package.xml  setup.py
ros2_ws/src/swarm_gcs/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_gcs/swarm_gcs/: mission_dashboard.py
ros2_ws/src/swarm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_msgs/msg/: DroneStatus.msg  MapUpdateSummary.msg  ObstacleReport.msg  TargetFound.msg
ros2_ws/src/swarm_perception/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_perception/src/: voxel_mapper.cpp
ros2_ws/src/swarm_sim_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_sim_bringup/launch/: dual_drone_sim.launch.py  multi_apf_sim.launch.py  single_drone_sim.launch.py
ros2_ws/src/swarm_sim_bringup/models/OakD-Lite/: model.sdf
ros2_ws/src/swarm_sim_bringup/models/red_can/: model.config  model.sdf
ros2_ws/src/swarm_sim_bringup/models/warehouse_shelf/: model.config  model.sdf
ros2_ws/src/swarm_sim_bringup/models/x500_flow/: model.sdf
ros2_ws/src/swarm_sim_bringup/models/x500_swarm/: model.config  model.sdf  model.sdf.bak_I003
ros2_ws/src/swarm_sim_bringup/worlds/: apf_open_arena.sdf  apf_wall_arena.sdf  forward_stop_test_arena.sdf  indoor_arena.sdf  lakehouse.sdf  lakehouse_preview.sdf  single_agent_search_room.sdf  single_agent_search_room_easy.sdf
ros2_ws/src/swarm_target_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_target_detection/swarm_target_detection/: target_detector.py
scripts/: cleanup_sim.sh  finalize_search_experiment.sh  plot_experiment_series.py  run_search_experiment.sh  run_search_experiment_series.sh
